tests/machine/x/rust/cross_join_filter.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/cross_join_filter.rs:10:144
   |
10 | ...() % 2 == 0) { continue; } tmp1.push(Result { n: n, l: l }); } } tmp1 };
   |                                                     ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
10 |     let pairs = { let mut tmp1 = Vec::new();for n in &nums { for &l in &letters { if !(n.clone() % 2 == 0) { continue; } tmp1.push(Result { n: *n, l: l }); } } tmp1 };
   |                                                                                                                                                +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq)]